--- a/Study/redux-saga-middleware/package.json
+++ b/Study/redux-saga-middleware/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-saga-effects": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
